# web-chat

./: schema.sql  设计文档.txt
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts  ws.ts
client/src/components/: Badge.css  Badge.tsx  ChatWindow.css  ChatWindow.tsx  FriendApplyList.css  FriendApplyList.tsx  FriendList.css  FriendList.tsx  GroupList.css  GroupList.tsx  LeftSidebar.css  LeftSidebar.tsx  MessageItem.css  MessageItem.tsx  RightActiveUser.css  RightActiveUser.tsx
client/src/context/: ChatContext.tsx  chatReducer.ts
client/src/pages/: Auth.css  ChatApp.css  ChatApp.tsx  Login.tsx  Register.tsx
server/: BUILD.txt  CMakeLists.txt
server/build_test/: CMakeCache.txt
server/src/: Logger.h  main.cpp
server/src/chat/: ChatHandler.cpp  ChatHandler.h
server/src/db/: MysqlStore.cpp  MysqlStore.h
server/src/net/: EpollServer.cpp  EpollServer.h  SocketUtil.cpp  SocketUtil.h  WebSocketUtil.cpp  WebSocketUtil.h  WsConnection.cpp  WsConnection.h
server/src/redis/: RedisStore.cpp  RedisStore.h
server/src/util/: CryptoUtil.cpp  CryptoUtil.h
